--- a/index.html
+++ b/index.html
@@ -3,10 +3,138 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>title</title>
-
+  <link rel="stylesheet" href="/css/app.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
+  <div class="master-controls">
+    <button id="play">Play</button>
+    <label>Tempo</label><input type="range" min="0" max="127" step="1" value="0">
+  </div>
+  <h1>pushbeat.001</h1>
 
+  <ul class="grid-line clearfix">
+    <li class="grid-line-header">bd</li>
+    <li class="grid-box current" id="#grid-1-1"></li>
+    <li class="grid-box" id="#grid-1-2"></li>
+    <li class="grid-box" id="#grid-1-3"></li>
+    <li class="grid-box" id="#grid-1-4"></li>
+    <li class="grid-box" id="#grid-1-5"></li>
+    <li class="grid-box" id="#grid-1-6"></li>
+    <li class="grid-box" id="#grid-1-7"></li>
+    <li class="grid-box" id="#grid-1-8"></li>
+    <li class="grid-box" id="#grid-1-9"></li>
+    <li class="grid-box" id="#grid-1-10"></li>
+    <li class="grid-box" id="#grid-1-11"></li>
+    <li class="grid-box" id="#grid-1-12"></li>
+    <li class="grid-box" id="#grid-1-13"></li>
+    <li class="grid-box" id="#grid-1-14"></li>
+    <li class="grid-box" id="#grid-1-15"></li>
+    <li class="grid-box" id="#grid-1-16"></li>
+
+  </ul>
+
+  <ul class="grid-line clearfix">
+    <li class="grid-line-header">sd</li>
+    <li class="grid-box current" id="#grid-2-1"></li>
+    <li class="grid-box" id="#grid-2-2"></li>
+    <li class="grid-box" id="#grid-2-3"></li>
+    <li class="grid-box" id="#grid-2-4"></li>
+    <li class="grid-box" id="#grid-2-5"></li>
+    <li class="grid-box" id="#grid-2-6"></li>
+    <li class="grid-box" id="#grid-2-7"></li>
+    <li class="grid-box" id="#grid-2-8"></li>
+    <li class="grid-box" id="#grid-2-9"></li>
+    <li class="grid-box" id="#grid-2-10"></li>
+    <li class="grid-box" id="#grid-2-11"></li>
+    <li class="grid-box" id="#grid-2-12"></li>
+    <li class="grid-box" id="#grid-2-13"></li>
+    <li class="grid-box" id="#grid-2-14"></li>
+    <li class="grid-box" id="#grid-2-15"></li>
+    <li class="grid-box" id="#grid-2-16"></li>
+  </ul>
+
+  <ul class="grid-line clearfix">
+    <li class="grid-line-header">hhcl</li>
+    <li class="grid-box current" id="#grid-3-1"></li>
+    <li class="grid-box" id="#grid-3-2"></li>
+    <li class="grid-box" id="#grid-3-3"></li>
+    <li class="grid-box" id="#grid-3-4"></li>
+    <li class="grid-box" id="#grid-3-5"></li>
+    <li class="grid-box" id="#grid-3-6"></li>
+    <li class="grid-box" id="#grid-3-7"></li>
+    <li class="grid-box" id="#grid-3-8"></li>
+    <li class="grid-box" id="#grid-3-9"></li>
+    <li class="grid-box" id="#grid-3-10"></li>
+    <li class="grid-box" id="#grid-3-11"></li>
+    <li class="grid-box" id="#grid-3-12"></li>
+    <li class="grid-box" id="#grid-3-13"></li>
+    <li class="grid-box" id="#grid-3-14"></li>
+    <li class="grid-box" id="#grid-3-15"></li>
+    <li class="grid-box" id="#grid-3-16"></li>
+  </ul>
+
+  <ul class="grid-line clearfix">
+    <li class="grid-line-header">hhop</li>
+    <li class="grid-box current" id="#grid-4-1"></li>
+    <li class="grid-box" id="#grid-4-2"></li>
+    <li class="grid-box" id="#grid-4-3"></li>
+    <li class="grid-box" id="#grid-4-4"></li>
+    <li class="grid-box" id="#grid-4-5"></li>
+    <li class="grid-box" id="#grid-4-6"></li>
+    <li class="grid-box" id="#grid-4-7"></li>
+    <li class="grid-box" id="#grid-4-8"></li>
+    <li class="grid-box" id="#grid-4-9"></li>
+    <li class="grid-box" id="#grid-4-10"></li>
+    <li class="grid-box" id="#grid-4-11"></li>
+    <li class="grid-box" id="#grid-4-12"></li>
+    <li class="grid-box" id="#grid-4-13"></li>
+    <li class="grid-box" id="#grid-4-14"></li>
+    <li class="grid-box" id="#grid-4-15"></li>
+    <li class="grid-box" id="#grid-4-16"></li>
+  </ul>
+
+  <div class="controls clearfix">
+    <div class="control-group clearfix">
+      <h2>bd</h2>
+      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Start</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>End</label><input type="range" min="0" max="127" step="1" value="0">
+    </div>
+
+    <div class="control-group clearfix">
+      <h2>sd</h2>
+      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Start</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>End</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Lowpass</label><input type="range" min="0" max="127" step="1" value="0">
+
+    </div>
+
+    <div class="control-group clearfix">
+      <h2>hhcl</h2>
+      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Q</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Length</label><input type="range" min="0" max="127" step="1" value="0">
+    </div>
+
+    <div class="control-group clearfix">
+      <h2>hhop</h2>
+      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Q</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Length</label><input type="range" min="0" max="127" step="1" value="0">
+    </div>
+  </div>
+  <footer class="clearfix">
+    <p>&copy; <a href="https://jan.krutisch.de/">Jan 'half/byte' Krutisch</a></p>
+    <p>See <a href="https://github.com/halfbyte/pushbeats">github.com/halfbyte/pushbeats</a> for details.</p>
+    <p>Best used with an <a href="http://ableton.com/en/push">Ableton Push</a> and Google Chrome.</p>
+    <p>Heavily reuses code from <a href="http://liv3c0der.com/">liv3c0der</a>.</p>
+  </footer>
+
+  <script type="text/javascript" charset="utf-8" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/js/pushbeats.js"></script>
 
   <script charset="utf-8">
 
