param views and models

--- a/index.html
+++ b/index.html
@@ -96,36 +96,36 @@
 </div>
 
   <div class="controls clearfix">
-    <div class="control-group clearfix">
+    <div class="control-group clearfix" id="basedrum">
       <h2>bd</h2>
-      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Start</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>End</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0" name="sweep">
+      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0" name="decay">
+      <label>Start</label><input type="range" min="0" max="127" step="1" value="0" name="start">
+      <label>End</label><input type="range" min="0" max="127" step="1" value="0" name="end">
     </div>
 
-    <div class="control-group clearfix">
+    <div class="control-group clearfix" id="snaredrum">
       <h2>sd</h2>
-      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Start</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>End</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Lowpass</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Sweep</label><input type="range" min="0" max="127" step="1" value="0" name="sweep">
+      <label>Decay</label><input type="range" min="0" max="127" step="1" value="0" name="decay">
+      <label>Start</label><input type="range" min="0" max="127" step="1" value="0" name="start">
+      <label>End</label><input type="range" min="0" max="127" step="1" value="0" name="end">
+      <label>Lowpass</label><input type="range" min="0" max="127" step="1" value="0" name="lowpass">
 
     </div>
 
-    <div class="control-group clearfix">
+    <div class="control-group clearfix" id="hhcl">
       <h2>hhcl</h2>
-      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Q</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Length</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0" name="frequency">
+      <label>Q</label><input type="range" min="0" max="127" step="1" value="0" name="q">
+      <label>Length</label><input type="range" min="0" max="127" step="1" value="0" name="length">
     </div>
 
-    <div class="control-group clearfix">
+    <div class="control-group clearfix" id="hhop">
       <h2>hhop</h2>
-      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Q</label><input type="range" min="0" max="127" step="1" value="0">
-      <label>Length</label><input type="range" min="0" max="127" step="1" value="0">
+      <label>Frequency</label><input type="range" min="0" max="127" step="1" value="0" name="frequency">
+      <label>Q</label><input type="range" min="0" max="127" step="1" value="0" name="q">
+      <label>Length</label><input type="range" min="0" max="127" step="1" value="0" name="length">
     </div>
   </div>
   <footer class="clearfix">
